# skills

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  intent-led-orchestration-check.nota  intent-led-orchestration-generate.nota  result  result-1  skills-check.nota  skills-generate.nota  skills-visualize.nota  skills.md
manifests/: active-outputs.nota  model-catalog.nota  module-dependencies.nota  nested-role-relations.nota  role-curricula.nota  role-execution-budgets.nota  role-model-assignments.nota  role-optional-skills.nota  skills-roster.nota  target-module-insertions.nota  universal-full-agent-modules.nota  universal-role-modules.nota
roles/: general-code-implementer.md  intent-recorder.md  intent-translator.md  manager.md  operating-system-implementer.md  repo-scaffolder.md  repository-closeout.md  rust-auditor.md  scout.md
schema/: assembly.schema
skills/: agent-output-protocol.md  claude-manager-non-fable.md  code-implementation-core.md  code-implementation.md  codex-skill-loading.md  component-architecture.md  context-handover.md  context-maintenance-deep.md  contract-repo.md  design-quality.md  edit-coordination.md  editing-closeout.md  engine-analysis.md  engine-report.md  general-instructions.md  intent-clarification.md  intent-core.md  intent-manifestation.md  library.md  main-feature-integration.md  management.md  manager-communication.md  manager-safeguards.md  micro-components.md  naming.md  nota-comments.md  nota-schema-design.md  nota-shape-checklist.md  pi-extension-updates.md  pi-internals.md  push-not-pull.md  (+17 more)
(+375 files in other folders)
