[package]
name = "skills"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LiGoldragon/skills"
description = "Schema-defined skill surface module assembler."
publish = false
links = "skills"
build = "build.rs"

[[bin]]
name = "skills"
path = "src/main.rs"

[features]
default = ["nota-text"]
nota-text = []

[dependencies]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
pulldown-cmark = "0.13"
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror = "2"
pathdiff = "0.2"

[build-dependencies]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
dead_code = "warn"
